kubernetes-deployments/homer/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: homer
  type: ClusterIP
