kubernetes-deployments/homer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: homer.jsnouff.net
    http:
      paths:
      - backend:
          service:
            name: homer
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - homer.jsnouff.net
      secretName: tls-secret
